evaluation/test_suite/positive/ub32/1.c
#include <stdio.h>

int main()
{
    char* p = "hello world!\n";
    *p = 'H';
    printf("%s", p);
}
